<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboso_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="thekouroshkarimi@gmail.com.com">thekourosh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>





  <!-- Needed because we use xacro to process URDF -->
  <exec_depend>xacro</exec_depend>

  <!-- To publish TF tree -->
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- To move joints with sliders -->
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <!-- To visualize robot -->
  <exec_depend>rviz2</exec_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>








  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
